fixed flex wrap issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,7 @@
       display: flex;
       flex-wrap: wrap;
       box-sizing: border-box;
+      width: 100%;
     }
     
     .mainContainer {
